# pricing_imoveis

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
data/: imv_database.db
data/interim/: chaves_apts.csv  chaves_casas.csv  chaves_condominio.csv  lopes.csv
data/processed/: .~lock.chaves_casas.csv#  chaves.csv  chaves_apts.csv  chaves_casas.csv  chaves_condominio.csv  clean_data.csv  lopes.csv
notebooks/: pricing.ipynb
src/: app.py  scrapy.cfg
src/extract/: settings.py
src/extract/spiders/: chaves.py  chaves_casas.py  chaves_condominio.py  lopes.py
src/load/: data_ingestion.py
src/transform/: chaves_casas_cleaning.py  chaves_cleaning.py  chaves_condominio_cleaning.py  lopes_cleaning.py
